# rc-backend

./: .dockerignore  .envrc  .gitignore  Cargo.toml  Dockerfile  README.md  api.md  api_schema.yml  compose.yaml  flake.nix  index.html  nginx.conf
.sqlx/: query-0d346d2850fe8fdb4f801ebb9d8f1cf238336da8f972b1b95ee9ee3464013435.json  query-1c874a51f24290d57c75921b9db5d3c5bb8ea18fb9fd97a983828bf404192185.json  query-29b24443840d58e374ac1bfc61ec619847db4ae2c8011974e7ff642d3f986c01.json  query-2d85ddf9b5c9e1b8af7e4461f5794d41916ca2da870b9781caf55b9f544cb69e.json  query-31786f1757051f40b496a49deb50f6e0be7c0fe67e17f9c4d80823de8b8e5f9d.json  query-31b01ffff71a5ec64f8703a7a0de74c41bbbc0872f174c058aa180d43b011d72.json  query-3c358b70a1288975de6ea5f133733832cdbffb19219f127f19fac9fa2f7d5ed2.json  query-3cb2577ac191d76f86ef267b2b19d4a60b93da1e4e24db592cd867df285149ec.json  query-4b0936b6d3aeb99ba1ed6160788a45a64dfa5ee368367526ce7dce73a36923d1.json  query-4ed45d3818f35279dd78da71a8e1458774b3afe177064f87324204f331f3f3a7.json  query-53a4d0c16708618709b2cd36a1ade46830eca17f8a0c83141433659ecbee0e15.json  query-53ec8984568e91e0c9598b8f848b19a90ee77444c388d3363ef2f17d913ab71b.json  query-6e827b924765ea4edb77527552471e14c9971df549666246fbdfdd2ffab44a92.json  query-71807f9db78d4c67754367e7e9c4eced1dfb1cb8ed00dd44f1effa330bdedebb.json  query-7e243bc9fdf033a37b065cb732d0afe4e5fd67e78dc3591e3dc719d5aab80d01.json  query-8787b87ec0cfeea5b4148664fa07c0da8688eec6a06d565574ec1daa793d2ec9.json  query-9537b5564235ad210278ca43804eaa66bbc0bd4a686145ff956c9d779ccf2720.json  query-9ad7b5704bd81dd8a6ac995b1e7cf789fb639f4d18da7b7d4f814c9a9424c660.json  query-a8a75f9b1932cc5e2c40ea0cbb23ad64385949608a907fff5547c56bc7d8e1da.json  query-ad7ae991e74482ec207b6aa12d0daac9b7395301bba51afc950a0c1a5221fe75.json  query-b8b3872a98aef6488ae8a156dc74d30301d3c804b2a18ce7e997363020b929bc.json  query-ca4d913b5a4f2785ebb35a6d8d884b2721dfcbe5fbd9050b6ef3e49a109605e7.json  query-ccf2772512ae6d0e1fbb89392a38e51dd4720a875261171228bd8b94c6a66096.json  query-e5ed710ecf10576e9e9256bc9e13102c7d06abe87c35b063f02d335ea58ca8f9.json  query-e7f22dfc8eb22bf327d05fc2d172488645108044959c6e530572d5d243b922d3.json  query-f695efade93dd2e44c7e864625f8759741db251d0d12b4cd55d991a49f9c0507.json  query-fe4e411a040de53d1b8c496394de5ebcd252432caada4555008ac6bcda1f0b87.json
migrations/: 20250325102004_New_db.sql  20250514220351_Added_power_for_cars.sql
src/: app_state.rs  main.rs
src/cars/: mod.rs  models.rs  router.rs
src/users/: auth.rs  mod.rs  models.rs  passwords.rs  (+2 more)
(+4 files in other folders)
