[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "uuid", "json", "macros", "time", "postgres" ] }
serde = "1.0.219"
serde_json = "1.0.140"
axum-extra = { version = "0.10.0", features = [ "typed-header" ] }
jsonwebtoken = "9.3.1"
anyhow = "1.0.97"
secrecy = { version = "0.10.3", features = [ "serde" ] }
dotenv = "0.15.0"
