[package]
name = "backend"
version = "0.1.1"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = [ "ws" ] }
tokio = { version = "1.44.1", features = [ "macros", "rt-multi-thread" ] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "uuid", "json", "macros", "time", "postgres", "ipnetwork", "chrono" ] }
serde = { version = "1.0.219", features = [ "derive" ] }
serde_json = "1.0.140"
axum-extra = { version = "0.10.0", features = [ "typed-header" ] }
jsonwebtoken = "9.3.1"
anyhow = "1.0.97"
secrecy = { version = "0.10.3", features = [ "serde" ] }
argon2 = "0.5.3"
password-hash = { version="0.5.0", features = [ "rand_core" ] }
hex-literal = "1.0.0"
uuid = { version = "1.16.0", features = [ "serde", "v4", "v7" ] }
chrono = { version = "0.4.23", features = [ "serde" ] }
rand = "0.9.0"
time = { version = "0.3.41", features = [ "serde" ] }
dotenvy = "0.15.7"
tower = { version = "0.5.2", features = [ "tokio" ] }
tower-http = { version = "0.6.2", features = [ "cors", "trace" ] }
http = "1.3.1"
futures = "0.3.31"
headers = "0.4.0"
